--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <div class="panel ">
                 <div class="pricing-plan">
-                        <img src="image/paper-plane1.png" alt="" class="pricing-image">
+                        <img src="paper-plane1.png" alt="" class="pricing-image">
                         <h2 class="pricing-header">Personal</h2>
                         <ul class="pricing-features">
                                 <li class="pricing-features-items">Custom Domains</li>
@@ -21,7 +21,7 @@
 
                 
                 <div class="pricing-plan">
-                        <img src="image/plane2.png" alt="" class="pricing-image" >
+                        <img src="plane2.png" alt="" class="pricing-image" >
                         <h2 class="pricing-header">Small team</h2>
                         <ul class="pricing-features">
                                 <li class="pricing-features-items">Never Sleeps</li>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="pricing-plan">
-                        <img src="image/space-ship.png" alt="" class="pricing-image">
+                        <img src="space-ship.png" alt="" class="pricing-image">
                         <h2 class="pricing-header">Enterprice</h2>
                         <ul class="pricing-features">
                                 <li class="pricing-features-items">Dedicated</li>
